<resources>
    <string name="gcm_sender_id">id:531408757318</string>
    <string name="app_name">Fomono</string>
    <string name="notif_action_text">Take a look.</string>
    <string name="title_activity_fomono">FomonoActivity</string>
    <string name="title_activity_fomono_detail">Details</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="title_activity_fomono_filter">Filter</string>
    <string name="title_activity_favorite_fragment">FavoriteFragment</string>
    <string name="EventFeeFree">Free</string>
    <string name="EventFeePaid">Paid</string>
    <string name="adapter_date_string_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="facebook_app_id">209657622867468</string>
    <string name="google_maps_api_key">AIzaSyAE1Bq6joAc6Msp27pakdXxJEB5KVs_HL4</string>
    <string name="eventbrite_api_key">IMWD66EDBK2PQIUKRK4K</string>
    <string name="btn_cancel">Back</string>
    <string name="btn_next">Next</string>
    <string name="btn_done">Done</string>
    <string name="pref_location">Location</string>
    <string name="pref_distance">Distance</string>
    <string name="pref_filters">Fomono Types</string>
    <string name="pref_curr_location">Only show Fomonos near:</string>
    <string name="pref_loc_hint">Address, City, or Zip Code</string>
    <string name="pref_distance_desc">Only show Fomonos that are this far from the specified location:</string>
    <string name="pref_distance_value">%1$d mi away</string>
    <string name="pref_filters_desc">Number of categories selected:</string>
    <string name="pref_filters_selected">%1$d selected</string>
    <string name="menu_filters">Filters</string>
    <string name="filter_title_events">Events</string>
    <string name="filter_title_food">Eats</string>
    <string name="movie_release_date_string">Release date:</string>
    <string name="MovieId">MovieId</string>
    <string name="pref_turn_on_location">Please turn on your location</string>

    <string name="event_brite_user_key">IMWD66EDBK2PQIUKRK4K</string>
    <string name="movieDB_api_key">d0af6e07311c078f8b5c7419e1e0e3c3</string>
    <string name="youTube_api_key">AIzaSyBzJxYSEc5CX83OJmTZb02f1QxfTLKtgpw</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_about">About</string>
    <string name="open_drawer">Open nav drawer</string>
    <string name="close_drawer">Close nav drawer</string>
    <string name="drawer_menu_timeline">Timeline</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_filter">Filter</string>
    <string name="FilterSortText">Sort by:</string>
    <string name="MovieSortFilterText">Pick a preference:</string>
    <string name="FilterEventSortButtonText">Search</string>
    <string name="FilterEatsSortButtonText">Sort</string>
    <string name="FilterMovieSortButtonText">Sort</string>
    <string name="drawer_menu_signout">Sign Out</string>
    <string name="drawer_menu_signin">Sign In</string>
    <string name="guest_name">Guest User</string>
    <string name="search">Search</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_sign_up"><u>Create one now.</u></string>
    <string name="login_guest">Continue as guest</string>

    <string name="signup_email">Email</string>
    <string name="signup_firstname">First Name</string>
    <string name="signup_lastname">Last Name</string>
    <string name="signup_signup">Sign Up</string>


    <string name="event_sort_val_one">Best Match</string>
    <string name="event_sort_val_two">Date</string>
    <string name="event_sort_val_three">Distance</string>

    <string name="eats_sort_val_one">Best Match</string>
    <string name="eats_sort_val_two">Distance</string>
    <string name="eats_sort_val_three">Rating Count</string>

    <string name="movie_sort_val_one">Now Playing</string>
    <string name="movie_sort_val_two">Popular</string>
    <string name="movie_sort_val_three">Top Rated</string>

    <string name="profile_save">Save</string>
    <string name="profile_cancel">Cancel</string>
    <string name="menu_share">Share</string>
    <string name="welcome">Welcome to Fomono</string>
    <string name="login_agreement">By continuing, I agree to Fomono\'s Terms of service and Privacy Policy</string>

    <string name="profile_first_name">First Name</string>
    <string name="profile_last_name">Last Name</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_email">Email</string>
    <string name="profile_about">About Me</string>


    <string-array name="FilterEventSortArray">
        <item>best_match</item>
        <item>date</item>
        <item>distance</item>
    </string-array>
    <string-array name="FilterEatsSortArray">
        <item>best_match</item>
        <item>distance</item>
        <item>rating_count</item>
    </string-array>
    <string-array name="FilterMovieSortArray">
        <item>playing_now</item>
        <item>popular</item>
        <item>top_rated</item>
    </string-array>

</resources>
