<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuSearchId"
        android:orderInCategory="1"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/menuFilter"
        app:showAsAction="always"
        android:orderInCategory="4"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_filter"
        />

    <item android:id="@+id/menuSortId"
        app:showAsAction="ifRoom"
        android:orderInCategory="5"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort"
        />

</menu>