<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fomono.fomono.activities.LoginUserActivity">

    <EditText
        android:id="@+id/etUserId"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_username"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_below="@+id/etUserId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/btnFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/twitterBlue"
        android:text="@string/login_facebook"
        android:layout_below="@+id/btnFomono"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btnFomono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorFomono"
        android:text="@string/login_login"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <Button
        android:id="@+id/btnGuestLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@color/grey"
        android:text="@string/login_guest"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@+id/btnGuestLogin"
        android:layout_marginBottom="35dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/tvNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_no_account"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"/>

        <TextView
            android:id="@+id/btnSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_sign_up" />
    </LinearLayout>


</RelativeLayout>
